--- a/package.json
+++ b/package.json
@@ -1,39 +1,36 @@
 {
   "private": true,
+  "name": "minimal-blog",
+  "description": "Typography driven, feature-rich blogging theme with minimal aesthetics. Includes tags/categories support and extensive features for code blocks such as live preview, line numbers, and line highlighting.",
+  "version": "1.3.12",
+  "author": "LekoArts <hello@lekoarts.de>",
+  "license": "0BSD",
+  "starter-name": "gatsby-starter-minimal-blog",
   "scripts": {
     "build": "gatsby build",
-    "dev": "gatsby develop -o",
+    "develop": "gatsby develop",
+    "develop:cypress": "cross-env CYPRESS_SUPPORT=y yarn develop",
+    "build:cypress": "cross-env CYPRESS_SUPPORT=y yarn build",
+    "start": "gatsby develop",
     "serve": "gatsby serve",
-    "lint": "eslint . --ext .js,.jsx --ignore-path .gitignore",
-    "deploy": "gatsby build && gh-pages -d public -b master",
-    "lint:fix": "eslint . --ext .js,.jsx --fix --ignore-path .gitignore"
+    "clean": "gatsby clean"
   },
   "dependencies": {
-    "@emotion/core": "^10.0.7",
-    "emotion": "^10.0.7",
-    "gatsby": "^2.0.118",
-    "gatsby-plugin-emotion": "^4.0.3",
-    "gatsby-plugin-offline": "^3.2.9",
-    "gatsby-plugin-react-helmet": "^3.0.10",
-    "gatsby-source-filesystem": "^2.3.11",
-    "gatsby-transformer-remark": "^2.8.15",
-    "html-to-react": "^1.3.4",
-    "prop-types": "^15.7.1",
-    "react": "^16.8.1",
-    "react-dom": "^16.8.1",
-    "react-helmet": "^5.2.0"
+    "@lekoarts/gatsby-theme-minimal-blog": "^4.0.0",
+    "gatsby": "^4.4.0",
+    "gatsby-omni-font-loader": "^1.3.1",
+    "gatsby-plugin-feed": "^4.0.0",
+    "gatsby-plugin-gatsby-cloud": "^4.0.0",
+    "gatsby-plugin-image": "^2.11.1",
+    "gatsby-plugin-manifest": "^4.0.0",
+    "gatsby-plugin-sharp": "^4.11.1",
+    "gatsby-plugin-sitemap": "^5.0.0",
+    "gatsby-plugin-webpack-bundle-analyser-v2": "^1.1.22",
+    "gatsby-source-filesystem": "^4.11.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   },
   "devDependencies": {
-    "babel-eslint": "^10.0.1",
-    "dotenv": "^7.0.0",
-    "eslint": "^5.13.0",
-    "eslint-config-airbnb": "^17.1.0",
-    "eslint-config-prettier": "^4.0.0",
-    "eslint-plugin-import": "^2.16.0",
-    "eslint-plugin-jsx-a11y": "^6.2.1",
-    "eslint-plugin-prettier": "^3.0.1",
-    "eslint-plugin-react": "^7.12.4",
-    "gh-pages": "^3.1.0",
-    "prettier": "^1.16.4"
+    "cross-env": "^7.0.3"
   }
 }
