Keep color theme fixed

--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -22,7 +22,7 @@ enableCodeCopy = false
 [footer]
   showCopyright = true
   showThemeAttribution = true
-  showAppearanceSwitcher = true
+  showAppearanceSwitcher = false
   showScrollToTop = true
 
 [homepage]
