--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -15,7 +15,7 @@ enableCodeCopy = false
 # robots = ""
 
 [header]
-  layout = "basic" # valid options: basic, hamburger, hybrid, custom
+  layout = "custom"
   # logo = "img/logo.jpg"
   showTitle = true
 
@@ -26,7 +26,7 @@ enableCodeCopy = false
   showScrollToTop = true
 
 [homepage]
-  layout = "profile" # valid options: page, profile, custom
+  layout = "custom"
   showRecent = true
   recentLimit = 2
 
