Use X logo for Twitter

--- a/config/_default/languages.en.toml
+++ b/config/_default/languages.en.toml
@@ -19,7 +19,7 @@ title = "Tomás Fernandes"
   bio = "Computer Scientist at University of Warwick"
   links = [
     { github = "https://github.com/tomasff" },
-    { twitter = "https://twitter.com/tomasff02" },
+    { x-twitter = "https://twitter.com/tomasff02" },
     { linkedin = "https://www.linkedin.com/in/tomas-fernandes02/" },
   #   { orcid = "https://orcid.org/userid" },
   #   { researchgate = "https://www.researchgate.net/profile/username" },
