--- a/config/_default/languages.en.toml
+++ b/config/_default/languages.en.toml
@@ -9,7 +9,7 @@ title = "Tomás Fernandes"
   isoCode = "en"
   mainSections = ["work"]
   rtl = false
-  description = "Computer scientist interested in software engineering, distributed systems, and geometric deep learning."
+  description = "Tomás Fernandes is a computer scientist and software engineer at Coinbase interested in software engineering, distributed systems, and geometric deep learning."
   dateFormat = "January 2006"
 
 [author]
