Missing GH token

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -77,4 +77,4 @@ jobs:
           path-to-deploy: public
           kubo-api-url: ${{ secrets.KUBO_API_URL }}
           kubo-api-auth: ${{ secrets.KUBO_API_AUTH }}
-        
+          github-token: ${{ github.token }}
