Auto-publish to IPNS

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -61,3 +61,6 @@ jobs:
           kubo-api-url: ${{ secrets.KUBO_API_URL }}
           kubo-api-auth: ${{ secrets.KUBO_API_AUTH }}
           github-token: ${{ github.token }}
+      - name: Publish to IPNS
+        run: |
+          ipfs name publish ${{ steps.deploy.outputs.cid }} --api ${{ secrets.KUBO_API_URL }} --api-auth ${{ secrets.KUBO_API_AUTH }}
