--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -58,10 +58,10 @@ jobs:
         with:
           path-to-deploy: public
           pin-name: tffr-net
-          ipfs-add-options: "--to-files /tffr-net/"
           kubo-api-url: ${{ secrets.KUBO_API_URL }}
           kubo-api-auth: ${{ secrets.KUBO_API_AUTH }}
           github-token: ${{ github.token }}
       - name: Publish to IPNS
         run: |
           ipfs name publish ${{ steps.deploy.outputs.cid }} --api ${{ secrets.KUBO_API_URL }} --api-auth ${{ secrets.KUBO_API_AUTH }}
+          ipfs cp /ipfs/${{ steps.deploy.outputs.cid }} /tffr-net/ --api ${{ secrets.KUBO_API_URL }} --api-auth ${{ secrets.KUBO_API_AUTH }}
