--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -41,27 +41,10 @@ jobs:
           submodules: recursive
           fetch-depth: 0
       - name: Build with Hugo
-        run: |
-          echo 'relativeURLs = true' | cat - hugo.toml > temp && mv temp hugo.toml
-          hugo --minify
-      - name: Connect to tailnet
-        uses: tailscale/github-action@v3
+        run: hugo --minify
+      - name: Upload build artifact
+        id: upload
+        uses: actions/upload-artifact@v4
         with:
-          oauth-client-id: ${{ secrets.TS_OAUTH_CLIENT_ID }}
-          oauth-secret: ${{ secrets.TS_OAUTH_SECRET }}
-          use-cache: 'true'
-          tags: tag:ci
-          version: latest
-      - name: Deploy to IPFS
-        uses: ipfs/ipfs-deploy-action@v1
-        id: deploy
-        with:
-          path-to-deploy: public
-          pin-name: tffr-net
-          kubo-api-url: ${{ secrets.KUBO_API_URL }}
-          kubo-api-auth: ${{ secrets.KUBO_API_AUTH }}
-          github-token: ${{ github.token }}
-      - name: Publish to IPNS and copy to MFS
-        run: |
-          ipfs name publish ${{ steps.deploy.outputs.cid }} --api ${{ secrets.KUBO_API_URL }} --api-auth ${{ secrets.KUBO_API_AUTH }}
-          ipfs files cp /ipfs/${{ steps.deploy.outputs.cid }} /tffr-net/ --api ${{ secrets.KUBO_API_URL }} --api-auth ${{ secrets.KUBO_API_AUTH }}
+          path: public/*
+          name: website.zip
